# SovAuto

./: .gitignore  README.md  RUNBOOK.md  SovAuto.iss  main.py  pyproject.toml  sovauto.spec
agent-summaries/: 20260323165100-gpt5-sovauto-summary.md  20260324090700-gpt54-product-finish-summary.md  20260324102000-dev-reembed-runtime-summary.md  20260324104600-dev-embed-stabilize-summary.md  20260324111300-dev-login-stabilize-summary.md  20260324140600-dev-e2e-finish-summary.md  20260325092332-dev-packaged-regression-summary.md  20260325105200-dev-mainpy-live-recovery-summary.md  20260325115600-dev-mainpy-runtime-finish-summary.md  20260325141600-dev-working-window-capture-summary.md  20260325153136-dev-record-playback-summary.md  20260325161651-dev-shortcut-binding-summary.md  20260325165645-dev-record-stop-hotkeys-summary.md  20260325173021-dev-alt-trigger-record-summary.md  20260326092546-dev-playback-focus-fixes-summary.md  20260326123000-dev-branding-push-summary.md  20260326123600-dev-publish-auth-summary.md  20260326130600-dev-pushauto-fix-summary.md  20260326133725-dev-runtime-record-cycle-summary.md  20260326154006-dev-build-commands-summary.md
src/hooks/: __init__.py  action_classifier.py  domain_event_normalizer.py  event_filter.py  event_queue.py  hotkey_manager.py  mouse_keyboard_listener.py  overlay_guard.py  recording_session.py  (+1 more)
tests/: test_config_serializer.py  test_deterministic_replay.py  test_engine.py  test_manual_onec_capture.py  test_onec_profiles.py  test_onec_session_detector.py  test_onec_shortcut_service.py  test_record_playback_engine.py
(+133 files in other folders)
